Compilation fails with assert(n->is_expensive()) failed: expensive nodes with non-null control here only

XMLWordPrintable

    • b36
    • 10
    • b12
    • x86_64
    • generic

      ADDITIONAL SYSTEM INFORMATION :
      We have experienced core dumps on Windows 10 and macOS High Sierra. We have received reports of core dumps on Linux Ubuntu 16.04, Windows 8/10 and macOS High Sierra. We have also seen core dumps on macOS 10.9, but that is not a supported platform for Java 10 and we have ignored that.

      A DESCRIPTION OF THE PROBLEM :
      Using Java 10 and 10.0.1, on some machines we have experienced frequent crashes with core dumps. These issues do not occur with Java 9, as far as we can tell. We have had crashes and reports on Windows, macOS and Linux. I have compiled some of the hs and replay logs for the core dumps. Can someone help me submit them to you for analysis? I don't see any option to upload them. Hopefully, we can help you find the cause and fix it.

      We really appreciate all the hard work you all put into developing Java, thank you.

      STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
      Unfortunately, we cannot reliably reproduce it on our development machines. When our program starts up, rarely it will crash on startup with a core dump. Our users have reported core dumps when performing predictable behaviors, such as dragging or drawing content, but we have been unable to reproduce those on our machines. I have attached the core dump files.

      EXPECTED VERSUS ACTUAL BEHAVIOR :
      EXPECTED -
      The program should not crash using Java 10, as these crashes do not occur with Java 9.
      ACTUAL -
      We experience crashes and core dumps.

      CUSTOMER SUBMITTED WORKAROUND :
      We have not found any workaround.

      FREQUENCY : often


            Assignee:
            Tobias Hartmann
            Reporter:
            Webbug Group
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: