8202179: Compilation fails with assert(n->is_expensive()) failed: expensive nodes with non-null control here only

Only treat the SqrtFNode as expensive if the control input is not NULL.

Reviewed-by: kvn, roland